Fix overflowed table width.

--- a/galtrace/apps/frontend/static/css/style.less
+++ b/galtrace/apps/frontend/static/css/style.less
@@ -61,7 +61,7 @@ form.gsc-search-box, .gsc-adBlock {
 
 #orders {
 	td.title {
-		@width: 748px;
+		@width: 1170px - ( 29px ) * 3 - 217px - 117px - 17px;
 		overflow: hidden;
 		white-space: nowrap;
 		width: @width;
